--- a/cutting/templates/cutting/order_list.html
+++ b/cutting/templates/cutting/order_list.html
@@ -307,9 +307,17 @@
                                                         <i class="fas fa-industry"></i> المصنع
                                                     </span>
                                                 {% elif 'products' in selected_types or 'accessory' in selected_types %}
-                                                    <span class="badge bg-info text-white" style="font-size: 0.6rem;">
-                                                        <i class="fas fa-store"></i> الفرع
-                                                    </span>
+                                                    {% if cutting_order.order.customer.customer_type == 'wholesale' and cutting_order.order.delivery_location %}
+                                                        <span class="badge bg-dark text-white"
+                                                              style="font-size: 0.6rem"
+                                                              title="مكان التسليم">
+                                                            <i class="fas fa-truck-loading"></i> {{ cutting_order.order.delivery_location }}
+                                                        </span>
+                                                    {% else %}
+                                                        <span class="badge bg-info text-white" style="font-size: 0.6rem;">
+                                                            <i class="fas fa-store"></i> الفرع
+                                                        </span>
+                                                    {% endif %}
                                                 {% endif %}
                                             {% endwith %}
                                         </div>
