feat: إضافة عرض سعر الجملة في تفاصيل المنتجات وإصلاح pagination
- إضافة عرض سعر الجملة في product_detail_new_icons.html
- إضافة عرض سعر الجملة في base_product_detail.html (بطاقة + جدول)
- إضافة عرض سعر الجملة في variant_detail.html
- إصلاح مشكلة عرض أرقام الصفحات في pagination
- تحديث views.py لاستخدام product_detail.html
- حذف 13 قالب قديم غير مستخدم

--- a/inventory/templates/inventory/product_detail_new_icons.html
+++ b/inventory/templates/inventory/product_detail_new_icons.html
@@ -168,7 +168,16 @@
                                 <span class="badge bg-info">{{ product.category }}</span>
                             </div>
                             <div class="product-price mt-3">
-                                <h4>{{ product.price }} {{ currency_symbol }}</h4>
+                                <div class="row text-center">
+                                    <div class="col-6">
+                                        <small class="text-muted d-block">السعر القطاعي</small>
+                                        <h4 class="text-success mb-0">{{ product.price|floatformat:2 }} {{ currency_symbol }}</h4>
+                                    </div>
+                                    <div class="col-6">
+                                        <small class="text-muted d-block">سعر الجملة</small>
+                                        <h4 class="text-info mb-0">{{ product.wholesale_price|floatformat:2 }} {{ currency_symbol }}</h4>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <hr>
