--- a/inventory/templates/inventory/product_list_new_icons.html
+++ b/inventory/templates/inventory/product_list_new_icons.html
@@ -271,8 +271,7 @@
                             {% elif i > page_obj.number|add:'-3' and i < page_obj.number|add:'3' %}
                                 <li class="page-item">
                                     <a class="page-link"
-                                       href="?page={{ i }}{% if search_query %}&search={{ search_query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_filter %}&filter={{ selected_filter }}{% endif %}{% if sort_by %}&sort={{ sort_by }}{% endif %}">{{
-                                    i }}</a>
+                                       href="?page={{ i }}{% if search_query %}&search={{ search_query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_filter %}&filter={{ selected_filter }}{% endif %}{% if sort_by %}&sort={{ sort_by }}{% endif %}">{{ i }}</a>
                                 </li>
                             {% endif %}
                         {% endfor %}
