--- a/inventory/templates/inventory/variants/base_product_detail.html
+++ b/inventory/templates/inventory/variants/base_product_detail.html
@@ -41,6 +41,12 @@
                     <i class="fas fa-plus me-1"></i>
                     إضافة متغير
                 </a>
+                <a href="{% url 'inventory:base_product_label_card' base_product.pk %}"
+                   target="_blank"
+                   class="btn btn-dark">
+                    <i class="fas fa-print me-1"></i>
+                    Label Card
+                </a>
                 <a href="{% url 'inventory:base_product_update' base_product.pk %}"
                    class="btn btn-primary">
                     <i class="fas fa-edit me-1"></i>
