--- a/inventory/templates/inventory/variants/base_product_detail.html
+++ b/inventory/templates/inventory/variants/base_product_detail.html
@@ -41,7 +41,7 @@
                     <i class="fas fa-plus me-1"></i>
                     إضافة متغير
                 </a>
-                <a href="{% url 'inventory:base_product_label_card' base_product.pk %}"
+                <a href="{% url 'inventory:product_label_card' base_product.pk %}"
                    target="_blank"
                    class="btn btn-dark">
                     <i class="fas fa-print me-1"></i>
