--- a/inventory/templates/inventory/variants/base_product_list.html
+++ b/inventory/templates/inventory/variants/base_product_list.html
@@ -25,6 +25,11 @@
                     <i class="fas fa-sync-alt me-1"></i>
                     ترحيل المنتجات
                 </a>
+                <a href="{% url 'inventory:all_products_label_cards' %}"
+                   class="btn btn-dark">
+                    <i class="fas fa-tags me-1"></i>
+                    طباعة كل البطاقات
+                </a>
                 <a href="{% url 'inventory:base_product_create' %}"
                    class="btn btn-primary">
                     <i class="fas fa-plus me-1"></i>
